debug avanceSemanal v1 - integracion servicio registroCompleto expensas y otros costos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -43,8 +43,7 @@
                             [matTooltipPosition]="'above'"
                             matTooltip="Debe ingresar la información en el campo para continuar"
                             matTooltipClass="info-tooltip"
-                            *ngIf="( formUsuario.get('procedencia').invalid && formUsuario.get('procedencia').touched ) || ( formUsuario.get('procedencia').invalid && esRegistroNuevo === false )"
-                          />
+                            *ngIf="( formUsuario.get('procedencia').invalid && formUsuario.get('procedencia').touched ) || ( formUsuario.get('procedencia').invalid && esRegistroNuevo === false )">
                         </span>
                       </div>
                     </div>
