--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-financiero/avance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-financiero/avance-financiero.component.html
@@ -11,10 +11,14 @@
                         <div class="col-md-12">
                           <div class="row">
                             <div class="pr-1">
-                              <label class="label-left" style="margin-top: 1.5em;">¿Requiere hacer alguna observación al avance financiero?</label>
+                              <label  class="label-left"
+                                      style="margin-top: 1.5em;"
+                                      [class.color-secondaryColor]="( formAvanceFinanciero.get('requiereObservacion').invalid && formAvanceFinanciero.get('requiereObservacion').touched) || ( formAvanceFinanciero.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+                                      ¿Requiere hacer alguna observación al avance financiero?
+                              </label>
                             </div>
                             <div class="col d-flex">
-                                <section style="width: 100%;">
+                                <section style="width: 92%;">
                                     <mat-form-field appearance="fill">
                                       <mat-select class="padding-left" formControlName="requiereObservacion" required>
                                         <mat-option *ngFor="let requisito of booleanosEnsayosLaboratorio" [value]="requisito.value">
@@ -24,6 +28,15 @@
                                     </mat-form-field>
                                   </section>
                             </div>
+                            <span class="icon-incompleto" style="margin-top: .5em;">
+                              <img  class="icon-incompleto--img"
+                                    src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido"
+                                    [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip"
+                                    *ngIf="( formAvanceFinanciero.get('requiereObservacion').invalid && formAvanceFinanciero.get('requiereObservacion').touched) || ( formAvanceFinanciero.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+                            </span>
                           </div>
                         </div>
                     </div>
@@ -32,7 +45,10 @@
                         <div class="col-md-12">
                           <div>
                             <div class="pr-1">
-                              <label class="label-left">Observaciones</label>
+                              <label  class="label-left"
+                                      [class.color-secondaryColor]="( formAvanceFinanciero.get('observacion').invalid && formAvanceFinanciero.get('observacion').touched) || ( formAvanceFinanciero.get('observacion').invalid && esRegistroNuevo === false )">
+                                      Observaciones
+                              </label>
                             </div>
                             <div class="col d-flex">
                                 <quill-editor   class="quill-editor-style card position-relative"
@@ -49,6 +65,15 @@
                                 <span class="contador miles" *ngIf="formAvanceFinanciero.get('observacion').value === null" style="margin-top: 3.5em;">
                                     400
                                 </span>
+                                <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                  <img  class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido"
+                                        [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip"
+                                        *ngIf="( formAvanceFinanciero.get('observacion').invalid && formAvanceFinanciero.get('observacion').touched) || ( formAvanceFinanciero.get('observacion').invalid && esRegistroNuevo === false )">
+                                </span>
                             </div>
                           </div>
                         </div>
@@ -58,10 +83,14 @@
                         <div class="col-md-12">
                           <div class="row">
                             <div class="pr-1">
-                              <label class="label-left" style="margin-top: 1.5em;">¿Considera que se debe generar una alerta sobre el avance financiero de la obra?</label>
+                              <label  class="label-left"
+                                      style="margin-top: 1.5em;"
+                                      [class.color-secondaryColor]="( formAvanceFinanciero.get('generarAlerta').invalid && formAvanceFinanciero.get('generarAlerta').touched) || ( formAvanceFinanciero.get('generarAlerta').invalid && esRegistroNuevo === false )">
+                                      ¿Considera que se debe generar una alerta sobre el avance financiero de la obra?
+                              </label>
                             </div>
                             <div class="col d-flex">
-                                <section style="width: 100%;">
+                                <section style="width: 92%;">
                                     <mat-form-field appearance="fill">
                                       <mat-select class="padding-left" formControlName="generarAlerta" required>
                                         <mat-option *ngFor="let requisito of booleanosEnsayosLaboratorio" [value]="requisito.value">
@@ -71,6 +100,15 @@
                                     </mat-form-field>
                                   </section>
                             </div>
+                            <span class="icon-incompleto" style="margin-top: .5em;">
+                              <img  class="icon-incompleto--img"
+                                    src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido"
+                                    [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip"
+                                    *ngIf="( formAvanceFinanciero.get('generarAlerta').invalid && formAvanceFinanciero.get('generarAlerta').touched) || ( formAvanceFinanciero.get('generarAlerta').invalid && esRegistroNuevo === false )">
+                            </span>
                           </div>
                         </div>
                     </div>
