--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -9,10 +9,14 @@
                       <div class="col-md-12">
                         <div class="row">
                           <div class="pr-1">
-                            <label class="label-left" style="margin-top: 1.5em;">¿Se ejecutó alguna actividad relacionada con la gestión ambiental durante la semana?</label>
+                            <label  class="label-left"
+                                    style="margin-top: 1.5em;"
+                                    [class.color-secondaryColor]="( formGestionAmbiental.get('seEjecutoGestionAmbiental').invalid && formGestionAmbiental.get('seEjecutoGestionAmbiental').touched) || ( formGestionAmbiental.get('seEjecutoGestionAmbiental').invalid && esRegistroNuevo === false )">
+                                    ¿Se ejecutó alguna actividad relacionada con la gestión ambiental durante la semana?
+                            </label>
                           </div>
                           <div class="col d-flex">
-                              <section style="width: 100%;">
+                              <section style="width: 92%;">
                                   <mat-form-field class="w-50" appearance="fill">
                                     <mat-select class="padding-left" formControlName="seEjecutoGestionAmbiental" required>
                                       <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -22,47 +26,28 @@
                                   </mat-form-field>
                                 </section>
                           </div>
+                          <span class="icon-incompleto" style="margin-top: .5em;">
+                            <img  class="icon-incompleto--img"
+                                  src="assets/img/icon/incompleto.svg"
+                                  alt="este campo es requerido"
+                                  [matTooltipPosition]="'above'"
+                                  matTooltip="Debe ingresar la información en el campo para continuar"
+                                  matTooltipClass="info-tooltip"
+                                  *ngIf="( formGestionAmbiental.get('seEjecutoGestionAmbiental').invalid && formGestionAmbiental.get('seEjecutoGestionAmbiental').touched) || ( formGestionAmbiental.get('seEjecutoGestionAmbiental').invalid && esRegistroNuevo === false )">
+                          </span>
                         </div>
                       </div>
                   </div>
-
-                  <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialGestionAmbiental.length > 0 && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === false && esVerDetalle === false">
-                    <table mat-table [dataSource]="tablaHistorialgestionAmbiental" matSort>
-                  
-                        <ng-container matColumnDef="fechaRevision">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
-                          <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
-                        </ng-container>
-                  
-                        <ng-container matColumnDef="responsable">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                            <td mat-cell *matCellDef="let element" align="center" class="color-text">
-                                <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
-                                    <p>Supervisor</p>
-                                </ng-container>
-                                <ng-template #noEsSupervisor>
-                                    <p>Apoyo a la supervisión</p>
-                                </ng-template> 
-                            </td>
-                        </ng-container>
-                  
-                        <ng-container matColumnDef="historial">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
-                          <td mat-cell *matCellDef="let element" align="center" class="color-text">
-                              <section [innerHTML]="element.observacion"></section>
-                          </td>
-                        </ng-container>
-                    
-                      <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
-                      <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
-                    </table>
-                  </section>
 
                   <div class="row" *ngIf="formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true">
                     <div class="col-md-6">
                       <div class="row">
                         <div class="pr-1">
-                          <label class="label-left" style="margin-top: 1em;">¿Cuantas actividades ejecutó?</label>
+                            <label  class="label-left"
+                                    style="margin-top: 1em;"
+                                    [class.color-secondaryColor]="( formGestionAmbiental.get('cantidadActividad').invalid && formGestionAmbiental.get('cantidadActividad').touched) || ( formGestionAmbiental.get('cantidadActividad').invalid && esRegistroNuevo === false )">
+                                    ¿Cuantas actividades ejecutó?
+                            </label>
                         </div>
                         <div class="col d-flex">
                           <section style="width: 100%;">
@@ -77,6 +62,15 @@
                           </section>
                           <span class="contador">{{1 - formGestionAmbiental.get( 'cantidadActividad' ).value.length}}</span>
                         </div>
+                        <span class="icon-incompleto">
+                            <img  class="icon-incompleto--img"
+                                  src="assets/img/icon/incompleto.svg"
+                                  alt="este campo es requerido"
+                                  [matTooltipPosition]="'above'"
+                                  matTooltip="Debe ingresar la información en el campo para continuar"
+                                  matTooltipClass="info-tooltip"
+                                  *ngIf="( formGestionAmbiental.get('cantidadActividad').invalid && formGestionAmbiental.get('cantidadActividad').touched) || ( formGestionAmbiental.get('cantidadActividad').invalid && esRegistroNuevo === false )">
+                          </span>
                       </div>
                     </div>
                   </div>
@@ -84,8 +78,40 @@
                 </mat-card-content>
             </mat-card>
 
+            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialGestionAmbiental.length > 0 && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === false && esVerDetalle === false">
+                <table mat-table [dataSource]="tablaHistorialgestionAmbiental" matSort>
+              
+                    <ng-container matColumnDef="fechaRevision">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                      <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                    </ng-container>
+              
+                    <ng-container matColumnDef="responsable">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                            <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                <p>Supervisor</p>
+                            </ng-container>
+                            <ng-template #noEsSupervisor>
+                                <p>Apoyo a la supervisión</p>
+                            </ng-template> 
+                        </td>
+                    </ng-container>
+              
+                    <ng-container matColumnDef="historial">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                          <section [innerHTML]="element.observacion"></section>
+                      </td>
+                    </ng-container>
+                
+                  <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                </table>
+            </section>
+
             <mat-accordion *ngIf="actividades.length > 0 && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true">
-                <mat-expansion-panel class="expansion-style sub-expansion-black" *ngFor="let actividad of actividades.controls; index as i" [formGroup]="actividad">
+                <mat-expansion-panel class="expansion-style sub-expansion-black animatedDown" *ngFor="let actividad of actividades.controls; index as i" [formGroup]="actividad">
                     <mat-expansion-panel-header class="expansion-style--header">
                         <mat-panel-title class="expansion-style--title" [ngClass]="actividad.get( 'estadoSemaforo' ).value">
                             Actividad {{ i + 1 }}
@@ -98,10 +124,14 @@
                                 <div class="col-md-12">
                                   <div class="row">
                                     <div class="pr-1">
-                                      <label class="label-left" style="margin-top: 1.5em;">Tipo de actividad</label>
+                                        <label  class="label-left"
+                                                style="margin-top: 1.5em;"
+                                                [class.color-secondaryColor]="( actividad.get('tipoActividad').invalid && actividad.get('tipoActividad').touched) || ( actividad.get('tipoActividad').invalid && esRegistroNuevo === false )">
+                                                Tipo de actividad
+                                        </label>
                                     </div>
                                     <div class="col d-flex">
-                                        <section style="width: 100%;">
+                                        <section style="width: 97%;">
                                             <mat-form-field class="w-50" appearance="fill">
                                               <mat-select   class="padding-left"
                                                             formControlName="tipoActividad"
@@ -120,6 +150,15 @@
                                             </mat-form-field>
                                           </section>
                                     </div>
+                                    <span class="icon-incompleto" style="margin-top: .5em;">
+                                        <img  class="icon-incompleto--img"
+                                              src="assets/img/icon/incompleto.svg"
+                                              alt="este campo es requerido"
+                                              [matTooltipPosition]="'above'"
+                                              matTooltip="Debe ingresar la información en el campo para continuar"
+                                              matTooltipClass="info-tooltip"
+                                              *ngIf="( actividad.get('tipoActividad').invalid && actividad.get('tipoActividad').touched) || ( actividad.get('tipoActividad').invalid && esRegistroNuevo === false )">
+                                      </span>
                                   </div>
                                 </div>
                             </div>
@@ -172,6 +211,7 @@
                                                               *ngIf=" actividad.get( 'tipoActividad' ).value !== null
                                                                       && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true
                                                                       && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosConstruccion"
+                                                              [esRegistroNuevo]="esRegistroNuevo"
                                                               class="mt-1em">
                             </app-manejo-residuos-construccion>
 
@@ -213,6 +253,7 @@
                                                             *ngIf=" actividad.get( 'tipoActividad' ).value !== null
                                                                     && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true
                                                                     && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosPeligrosos"
+                                                            [esRegistroNuevo]="esRegistroNuevo"
                                                             class="mt-1em">
                             </app-manejo-residuos-peligrosos>
 
@@ -254,6 +295,7 @@
                                                 *ngIf=" actividad.get( 'tipoActividad' ).value !== null
                                                         && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true
                                                         && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.otra"
+                                                [esRegistroNuevo]="esRegistroNuevo"
                                                 class="mt-1em">
                             </app-otros-manejos>
 
