--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
@@ -12,16 +12,32 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="pr-1">
-                        <label class="label-left">Proveedor</label>
+                        <label  class="label-left"
+                                [class.color-secondaryColor]="( proveedor.get('proveedor').invalid && proveedor.get('proveedor').touched) || ( proveedor.get('proveedor').invalid && esRegistroNuevo === false )">
+                                Proveedor
+                        </label>
                     </div>
                     <div class="col d-flex">
                         <section style="width: 100%;">
                             <mat-form-field>
-                                <input matInput type="text" maxlength="50" formControlName="proveedor" required>
+                                <input  matInput
+                                        type="text"
+                                        maxlength="50"
+                                        formControlName="proveedor"
+                                        required>
                             </mat-form-field>
                         </section>
                         <span class="contador">{{50 - proveedor.get( 'proveedor' ).value.length}}</span>
                     </div>
+                    <span class="icon-incompleto">
+                      <img  class="icon-incompleto--img"
+                            src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
+                            *ngIf="( proveedor.get('proveedor').invalid && proveedor.get('proveedor').touched) || ( proveedor.get('proveedor').invalid && esRegistroNuevo === false )">
+                    </span>
                 </div>
             </div>
         </div>
@@ -30,10 +46,14 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="pr-1">
-                  <label class="label-left" style="margin-top: 1.5em;">¿Requiere permisos ambientales y/o mineros?</label>
+                  <label  class="label-left"
+                          style="margin-top: 1.5em;"
+                          [class.color-secondaryColor]="( proveedor.get('requierePermisosAmbientalesMineros').invalid && proveedor.get('requierePermisosAmbientalesMineros').touched) || ( proveedor.get('requierePermisosAmbientalesMineros').invalid && esRegistroNuevo === false )">
+                          ¿Requiere permisos ambientales y/o mineros?
+                  </label>
                 </div>
                 <div class="col d-flex">
-                    <section style="width: 100%;">
+                    <section style="width: 96%;">
                         <mat-form-field appearance="fill">
                           <mat-select class="padding-left" formControlName="requierePermisosAmbientalesMineros" required>
                             <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -43,6 +63,15 @@
                         </mat-form-field>
                       </section>
                 </div>
+                <span class="icon-incompleto" style="margin-top: .5em;">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( proveedor.get('requierePermisosAmbientalesMineros').invalid && proveedor.get('requierePermisosAmbientalesMineros').touched) || ( proveedor.get('requierePermisosAmbientalesMineros').invalid && esRegistroNuevo === false )">
+                </span>
               </div>
             </div>
         </div>
@@ -54,7 +83,7 @@
                   <label class="label-left">Campo URL</label>
                 </div>
                 <div class="col d-flex">
-                    <mat-form-field style="width: 98%;">
+                    <mat-form-field style="width: 94%;">
                         <input  matInput
                                 type="text"
                                 maxlength="400"
@@ -103,10 +132,14 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" style="margin-top: 1.5em;">¿Los materiales de construcción se encontraron protegidos y demarcados correctamente?</label>
+              <label  class="label-left"
+                      style="margin-top: 1.5em;"
+                      [class.color-secondaryColor]="( formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').invalid && formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').touched) || ( formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').invalid && esRegistroNuevo === false )">
+                      ¿Los materiales de construcción se encontraron protegidos y demarcados correctamente?
+              </label>
             </div>
             <div class="col d-flex">
-                <section style="width: 100%;">
+                <section style="width: 93%;">
                     <mat-form-field appearance="fill">
                       <mat-select class="padding-left" formControlName="estanProtegidosDemarcadosMateriales" required>
                         <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -116,6 +149,15 @@
                     </mat-form-field>
                   </section>
             </div>
+            <span class="icon-incompleto" style="margin-top: .5em;">
+              <img  class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="( formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').invalid && formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').touched) || ( formManejoMaterialInsumo.get('estanProtegidosDemarcadosMateriales').invalid && esRegistroNuevo === false )">
+            </span>
           </div>
         </div>
     </div>
@@ -124,10 +166,14 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" style="margin-top: 1.5em;">¿Requiere hacer una observación acerca del estado de los materiales de construcción?</label>
+              <label  class="label-left"
+                      style="margin-top: 1.5em;"
+                      [class.color-secondaryColor]="( formManejoMaterialInsumo.get('requiereObservacion').invalid && formManejoMaterialInsumo.get('requiereObservacion').touched) || ( formManejoMaterialInsumo.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+                      ¿Requiere hacer una observación acerca del estado de los materiales de construcción?
+              </label>
             </div>
             <div class="col d-flex">
-                <section style="width: 100%;">
+                <section style="width: 94%;">
                     <mat-form-field appearance="fill">
                       <mat-select class="padding-left" formControlName="requiereObservacion" required>
                         <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -137,6 +183,15 @@
                     </mat-form-field>
                   </section>
             </div>
+            <span class="icon-incompleto" style="margin-top: .5em;">
+              <img  class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="( formManejoMaterialInsumo.get('requiereObservacion').invalid && formManejoMaterialInsumo.get('requiereObservacion').touched) || ( formManejoMaterialInsumo.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+            </span>
           </div>
         </div>
     </div>
@@ -145,7 +200,10 @@
         <div class="col-md-12">
           <div>
             <div class="pr-1">
-              <label class="label-left">Observaciones</label>
+              <label  class="label-left"
+                      [class.color-secondaryColor]="( formManejoMaterialInsumo.get('observacion').invalid && formManejoMaterialInsumo.get('observacion').touched) || ( formManejoMaterialInsumo.get('observacion').invalid && esRegistroNuevo === false )">
+                      Observaciones
+              </label>
             </div>
             <div class="col d-flex" style="width: 100%;">
                 <quill-editor   class="quill-editor-style card position-relative"
@@ -163,6 +221,15 @@
                 <span class="contador miles" *ngIf="formManejoMaterialInsumo.get('observacion').value === null" style="margin-top: 3.5em;">
                     400
                 </span>
+                <span class="icon-incompleto" style="margin-top: 3.6em;">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( formManejoMaterialInsumo.get('observacion').invalid && formManejoMaterialInsumo.get('observacion').touched) || ( formManejoMaterialInsumo.get('observacion').invalid && esRegistroNuevo === false )">
+                </span>
             </div>
           </div>
         </div>
@@ -175,7 +242,7 @@
               <label class="label-left">URL con soporte</label>
             </div>
             <div class="col d-flex">
-                <mat-form-field style="width: 98%;">
+                <mat-form-field style="width: 95%;">
                     <input  matInput
                             type="text"
                             maxlength="400"
