--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-peligrosos/manejo-residuos-peligrosos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-peligrosos/manejo-residuos-peligrosos.component.html
@@ -3,10 +3,14 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" style="margin-top: 1.5em;">¿Los residuos peligrosos y especiales se clasificaron y acopiaron en lugares seguros?</label>
+              <label  class="label-left"
+                      style="margin-top: 1.5em;"
+                      [class.color-secondaryColor]="( formManejoResiduosPeligrosos.get('estanClasificados').invalid && formManejoResiduosPeligrosos.get('estanClasificados').touched) || ( formManejoResiduosPeligrosos.get('estanClasificados').invalid && esRegistroNuevo === false )">
+                      ¿Los residuos peligrosos y especiales se clasificaron y acopiaron en lugares seguros?
+              </label>
             </div>
             <div class="col d-flex">
-                <section style="width: 100%;">
+                <section style="width: 95%;">
                     <mat-form-field appearance="fill">
                       <mat-select class="padding-left" formControlName="estanClasificados" required>
                         <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -16,6 +20,15 @@
                     </mat-form-field>
                   </section>
             </div>
+            <span class="icon-incompleto" style="margin-top: .5em;">
+              <img  class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="( formManejoResiduosPeligrosos.get('estanClasificados').invalid && formManejoResiduosPeligrosos.get('estanClasificados').touched) || ( formManejoResiduosPeligrosos.get('estanClasificados').invalid && esRegistroNuevo === false )">
+            </span>
           </div>
         </div>
     </div>
@@ -24,10 +37,14 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" style="margin-top: 1.5em;">¿Requiere hacer una observación acerca de la clasificación y acopio de los residuos peligrosos?</label>
+              <label  class="label-left"
+                      style="margin-top: 1.5em;"
+                      [class.color-secondaryColor]="( formManejoResiduosPeligrosos.get('requiereObservacion').invalid && formManejoResiduosPeligrosos.get('requiereObservacion').touched) || ( formManejoResiduosPeligrosos.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+                      ¿Requiere hacer una observación acerca de la clasificación y acopio de los residuos peligrosos?
+              </label>
             </div>
             <div class="col d-flex">
-                <section style="width: 100%;">
+                <section style="width: 94%;">
                     <mat-form-field appearance="fill">
                       <mat-select class="padding-left" formControlName="requiereObservacion" required>
                         <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
@@ -37,6 +54,15 @@
                     </mat-form-field>
                   </section>
             </div>
+            <span class="icon-incompleto" style="margin-top: .5em;">
+              <img  class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="( formManejoResiduosPeligrosos.get('requiereObservacion').invalid && formManejoResiduosPeligrosos.get('requiereObservacion').touched) || ( formManejoResiduosPeligrosos.get('requiereObservacion').invalid && esRegistroNuevo === false )">
+            </span>
           </div>
         </div>
     </div>
@@ -45,7 +71,10 @@
         <div class="col-md-12">
           <div>
             <div class="pr-1">
-              <label class="label-left">Observaciones</label>
+              <label  class="label-left"
+                      [class.color-secondaryColor]="( formManejoResiduosPeligrosos.get('observacion').invalid && formManejoResiduosPeligrosos.get('observacion').touched) || ( formManejoResiduosPeligrosos.get('observacion').invalid && esRegistroNuevo === false )">
+                      Observaciones
+              </label>
             </div>
             <div class="col d-flex" style="width: 100%;">
                 <quill-editor   class="quill-editor-style card position-relative"
@@ -63,6 +92,15 @@
                 <span class="contador miles" *ngIf="formManejoResiduosPeligrosos.get('observacion').value === null" style="margin-top: 3.5em;">
                     400
                 </span>
+                <span class="icon-incompleto" style="margin-top: 3.6em;">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( formManejoResiduosPeligrosos.get('observacion').invalid && formManejoResiduosPeligrosos.get('observacion').touched) || ( formManejoResiduosPeligrosos.get('observacion').invalid && esRegistroNuevo === false )">
+                </span>
             </div>
           </div>
         </div>
@@ -75,7 +113,7 @@
               <label class="label-left">URL con soporte registro fotográfico</label>
             </div>
             <div class="col d-flex">
-                <mat-form-field style="width: 98%;">
+                <mat-form-field style="width: 95.5%;">
                     <input  matInput
                             type="text"
                             maxlength="400"
