--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/otros-manejos/otros-manejos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/otros-manejos/otros-manejos.component.html
@@ -3,7 +3,10 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left">Fecha de actividad</label>
+              <label  class="label-left"
+                      [class.color-secondaryColor]="( formOtrosManejos.get('fechaActividad').invalid && formOtrosManejos.get('fechaActividad').touched) || ( formOtrosManejos.get('fechaActividad').invalid && esRegistroNuevo === false )">
+                      Fecha de actividad
+              </label>
             </div>
             <div class="col d-flex">
                 <mat-form-field>
@@ -25,6 +28,15 @@
                               src="assets/img/icon/calendarioCirculo.svg"
                               alt="Abrir Calendario">
                 </button>
+                <span class="icon-incompleto" style="margin-top: .2em;">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( formOtrosManejos.get('fechaActividad').invalid && formOtrosManejos.get('fechaActividad').touched) || ( formOtrosManejos.get('fechaActividad').invalid && esRegistroNuevo === false )">
+                </span>
             </div>
           </div>
         </div>
@@ -34,7 +46,10 @@
         <div class="col-md-12">
           <div>
             <div class="pr-1">
-              <label class="label-left">Actividad</label>
+              <label  class="label-left"
+                      [class.color-secondaryColor]="( formOtrosManejos.get('actividad').invalid && formOtrosManejos.get('actividad').touched) || ( formOtrosManejos.get('actividad').invalid && esRegistroNuevo === false )">
+                      Actividad
+              </label>
             </div>
             <div class="col d-flex" style="width: 100%;">
                 <quill-editor   class="quill-editor-style card position-relative"
@@ -52,6 +67,15 @@
                 <span class="contador miles" *ngIf="formOtrosManejos.get('actividad').value === null" style="margin-top: 3.5em;">
                     500
                 </span>
+                <span class="icon-incompleto" style="margin-top: 3.6em;">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="( formOtrosManejos.get('actividad').invalid && formOtrosManejos.get('actividad').touched) || ( formOtrosManejos.get('actividad').invalid && esRegistroNuevo === false )">
+                </span>
             </div>
           </div>
         </div>
@@ -64,7 +88,7 @@
               <label class="label-left">URL con soporte</label>
             </div>
             <div class="col d-flex">
-                <mat-form-field style="width: 98%;">
+                <mat-form-field style="width: 94%;">
                     <input  matInput
                             type="text"
                             maxlength="400"
